--- a/down.html
+++ b/down.html
@@ -67,10 +67,11 @@
         .card {
             background: white;
             border-radius: 8px;
+            border-color: #333;
+            border-width: 2px;
             padding: 20px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             text-align: center;
-            transition: transform 0.2s ease;
+            transition: transform 0.3s ease;
         }
 
         .card:hover {
@@ -81,6 +82,7 @@
             max-width: 100%;
             height: auto;
             border-radius: 8px;
+            border-color: #333;
             margin-bottom: 20px;
         }
 
