--- a/index.html
+++ b/index.html
@@ -330,11 +330,140 @@
         src = "https://kit.fontawesome.com/6478f529f2.js"
         crossorigin = "anonymous"
 
-        const canvas = document.getElementById('spaceCanvas');
-        const ctx = canvas.getContext('2d');
-        let stars = [];
-        const numStars = 300;
         const fortunes = [
+            "새로운 기회는 도전하는 자에게 찾아옵니다",
+            "올해는 당신의 잠재력을 최대한 발휘해보세요",
+            "어려움 속에서도 희망의 씨앗을 심어보세요",
+            "자신의 가치를 믿고 더 큰 목표를 향해 나아가세요",
+            "과거의 실패는 당신을 더 강하게 만들 것입니다",
+            "올해는 당신의 용기가 빛날 해가 될 것입니다",
+            "작은 성과들이 모여 큰 성공을 만들어냅니다",
+            "하루하루를 감사와 성실함으로 채워보세요",
+            "목표를 세우고 그 목표에 집중하는 해로 만들어보세요",
+            "올해는 인생의 전환점을 맞이하기 좋은 해입니다",
+            "변화를 두려워하지 말고 과감히 도전해보세요",
+            "모든 시작은 작아도, 결과는 크게 다가올 것입니다",
+            "주변의 소소한 행복을 소중히 여기는 해로 만들어보세요",
+            "올해는 더 많은 웃음과 사랑을 나누는 해로 삼으세요",
+            "어려운 상황에서도 한 걸음씩 나아가는 용기를 가지세요",
+            "과거에 얽매이지 말고 새로운 출발을 시도해보세요",
+            "작은 변화도 인생의 큰 전환점이 될 수 있습니다",
+            "행복은 멀리 있지 않습니다. 오늘 속에서 찾으세요",
+            "끊임없는 배움이 당신의 길을 밝힐 것입니다",
+            "올해는 자신의 의견을 더 강하게 표현해보세요",
+            "자신이 진정 원하는 것을 위해 시간을 투자하세요",
+            "올해는 타인의 성공을 축하하며 함께 성장해보세요",
+            "작은 성공이 큰 자신감을 만들어줍니다",
+            "올해는 당신의 열정이 빛날 해가 될 것입니다",
+            "올해는 당신의 가능성을 마음껏 펼쳐보세요",
+            "작은 도전이 큰 변화를 만들어냅니다",
+            "긍정적인 태도가 새로운 기회를 가져다줍니다",
+            "마음에 품은 목표를 향해 한 걸음 더 나아가세요",
+            "성공의 비결은 꾸준함에 있습니다",
+            "올해는 새로운 꿈을 꿀 준비를 해보세요",
+            "어려움은 더 강해지기 위한 기회입니다",
+            "매일 새로운 시도를 통해 변화를 만들어보세요",
+            "감사의 마음으로 하루를 시작해보세요",
+            "자신의 열정을 믿고 앞으로 나아가세요",
+            "올해는 과감히 새로운 환경에 도전해보세요",
+            "작은 성과에도 스스로를 칭찬해보세요",
+            "꾸준함이 당신의 삶을 빛나게 할 것입니다",
+            "당신의 노력은 반드시 결실을 맺을 것입니다",
+            "올해는 새로운 인연을 맺기에 좋은 해입니다",
+            "나를 믿는 순간부터 변화는 시작됩니다",
+            "작은 친절이 세상을 밝힐 것입니다",
+            "매일 조금씩 더 나아지는 당신을 응원합니다",
+            "올해는 새로운 기술을 배우기에 좋은 해입니다",
+            "도전하는 모든 순간이 성장으로 이어질 것입니다",
+            "지금 가진 것에 감사하며 하루를 시작하세요",
+            "꿈꾸는 것에 두려워하지 말고 시도해보세요",
+            "올해는 당신의 창의력이 빛을 발할 해가 될 것입니다",
+            "목표를 세우고 작은 걸음부터 시작하세요",
+            "삶의 모든 순간이 배움이 될 수 있습니다",
+            "타인의 장점을 발견하며 배우는 해로 삼으세요",
+            "행복은 지금 이 순간 속에 있습니다",
+            "올해는 더 나은 자신을 발견하는 해가 될 것입니다",
+            "실수를 두려워하지 말고 배움의 기회로 삼으세요",
+            "주변 사람들과 함께하는 즐거움을 느껴보세요",
+            "올해는 자신만의 속도로 나아가 보세요",
+            "열정적으로 살아가는 순간 당신은 빛날 것입니다",
+            "작은 변화가 당신의 인생을 바꿀 수 있습니다",
+            "자신의 가치를 높이는 선택을 하세요",
+            "올해는 사랑을 표현하기 좋은 해입니다",
+            "매일 웃음으로 하루를 시작해보세요",
+            "작은 목표를 이루는 기쁨을 누려보세요",
+            "올해는 더 많이 듣고 더 많이 공감해보세요",
+            "긍정의 말이 당신의 하루를 밝게 만들어줍니다",
+            "당신의 노력은 곧 큰 성취로 이어질 것입니다",
+            "도전의 길에서 두려움을 내려놓으세요",
+            "작은 실천이 큰 성공으로 이어질 것입니다",
+            "올해는 자신에게 더 많은 시간을 투자하세요",
+            "새로운 경험이 당신의 세상을 넓혀줄 것입니다",
+            "좋은 습관을 만드는 데 집중해보세요",
+            "타인의 도움을 감사히 받아들이세요",
+            "매일 조금씩 나아가는 것만으로 충분합니다",
+            "올해는 주변 사람들과 더 많이 대화해보세요",
+            "당신의 진심이 사람들에게 닿을 것입니다",
+            "올해는 인내심이 큰 성과를 가져다줄 것입니다",
+            "작은 도전도 성공의 시작이 될 수 있습니다",
+            "올해는 마음속 두려움을 극복하는 해로 만들어보세요",
+            "당신이 바라는 변화를 스스로 만들어가세요",
+            "배움의 자세로 하루를 채워보세요",
+            "올해는 건강을 최우선으로 삼아보세요",
+            "삶의 균형을 맞추는 데 집중해보세요",
+            "작은 친절이 주변 사람들의 하루를 밝힙니다",
+            "매 순간 자신을 믿고 도전해보세요",
+            "올해는 새롭게 시작하기 좋은 해입니다",
+            "도움이 필요한 사람에게 먼저 손을 내밀어 보세요",
+            "당신의 생각이 당신의 현실을 만듭니다",
+            "매일 감사의 마음으로 하루를 마무리하세요",
+            "올해는 자신을 더 사랑하는 법을 배워보세요",
+            "작은 성취가 더 큰 목표로 이어질 것입니다",
+            "삶을 풍요롭게 하는 경험에 투자해보세요",
+            "올해는 새로운 장소를 여행해보기에 좋은 해입니다",
+            "타인의 성공을 축하하며 함께 성장해보세요",
+            "용기를 내어 평소 하지 않던 것을 시도해보세요",
+            "작은 행복을 발견하고 기록으로 남겨보세요",
+            "올해는 당신의 재능을 발휘할 해가 될 것입니다",
+            "자신의 꿈을 구체적으로 그려보고 실천해보세요",
+            "좋은 관계를 더 깊게 만들어보세요",
+            "올해는 불가능을 가능으로 바꾸는 해가 될 것입니다",
+            "새로운 관점으로 문제를 바라보세요",
+            "올해는 더 나은 자신을 만드는 해로 삼으세요",
+            "당신의 열정이 주위 사람들에게 영감을 줄 것입니다",
+            "작은 노력들이 당신의 인생을 바꿀 것입니다",
+            "주변의 작은 행복을 소중히 여기세요",
+            "올해는 실수를 기회로 바꾸는 해가 될 것입니다",
+            "꿈은 작아도 꾸준히 나아가세요",
+            "작은 실천이 큰 변화를 만듭니다",
+            "올해는 새로운 사람들과의 만남을 즐겨보세요",
+            "타인의 의견에 귀 기울이며 배워보세요",
+            "당신의 결단력이 빛날 해가 될 것입니다",
+            "올해는 평소와 다른 선택을 해보세요",
+            "자신을 믿고 끝까지 도전해보세요",
+            "올해는 자신에게 새로운 목표를 부여해보세요",
+            "작은 것에 감사하며 하루를 보내보세요",
+            "좋은 습관이 당신의 삶을 더 풍요롭게 할 것입니다",
+            "올해는 당신의 노력이 결실을 맺는 해가 될 것입니다",
+            "새로운 시도를 통해 가능성을 넓혀보세요",
+            "당신의 결정이 당신의 미래를 만듭니다",
+            "주어진 시간을 최대한 활용하는 해로 만들어보세요",
+            "평범한 하루도 특별하게 만드는 능력을 길러보세요",
+            "도전하는 과정에서 얻는 경험이 당신을 성장시킵니다",
+            "올해는 실수를 두려워하지 않고 나아가보세요",
+            "당신의 긍정적인 에너지가 주변을 환하게 만들 것입니다",
+            "올해는 함께 나누는 기쁨을 배우는 해가 될 것입니다",
+            "자신의 소중함을 깨닫고 돌보는 해로 만들어보세요",
+            "작은 친절이 큰 행복으로 돌아올 것입니다",
+            "올해는 타인의 장점을 발견하며 배우는 해로 삼으세요",
+            "한 번 더 도전하면 뜻밖의 결과를 얻을 수 있습니다",
+            "새로운 배움이 당신의 가능성을 확장시킵니다",
+            "올해는 더 많은 모험과 발견으로 가득할 것입니다",
+            "기쁨과 배려로 주변을 따뜻하게 만들어보세요",
+            "더 나은 자신을 위해 오늘을 충실히 살아보세요",
+            "성공은 꾸준함 속에서 시작됩니다",
+            "올해는 더 많은 자신감을 쌓아가는 해로 만들어보세요",
+            "결단력 있는 행동이 당신의 길을 열어줄 것입니다",
             "작은 성취를 축하하며 하루를 시작하세요",
             "오늘은 새로운 사람에게 다가가 보세요",
             "머릿속으로만 고민하지 말고 한 걸음 내디뎌 보세요",
@@ -381,54 +510,64 @@
             "실패를 두려워하지 않는다면 모든 것이 도전이 됩니다",
             "마음을 열고 새로운 의견을 받아들여 보세요",
             "웃음이 필요할 때는 유머를 나눠보세요",
-            "오늘은 작은 선행이 큰 보답으로 돌아올 수 있습니다",
-            "멀리 있는 목표보다 가까운 행복을 먼저 느껴보세요",
-            "직관을 믿어도 좋은 날입니다",
-            "마음을 비우고 새로운 것을 받아들일 준비를 하세요",
-            "계획했던 일을 시작하기 딱 좋은 날입니다",
-            "자연과 교감하며 휴식을 취해보세요",
-            "작은 변화가 인생의 전환점이 될 수 있습니다",
-            "사랑하는 사람들에게 마음을 표현해보세요",
-            "오늘의 노력은 내일의 결실로 이어질 것입니다",
-            "어려운 결정은 천천히 시간을 두고 내려보세요",
-            "아침을 활기차게 시작하면 하루가 달라질 것입니다",
-            "모험을 즐길 준비를 해보세요",
-            "기회는 준비된 자에게 찾아옵니다",
-            "감정을 정리할 시간을 가져보세요",
-            "자신감을 가지면 어떤 도전도 극복할 수 있습니다",
-            "오늘은 새로운 목표를 세우기에 좋은 날입니다",
-            "사소한 일에도 성실함을 잃지 마세요",
-            "음악으로 마음을 치유해보세요",
-            "관심 있는 책을 읽으며 지식을 넓혀보세요",
-            "좋은 사람들과의 대화가 큰 힘이 될 것입니다",
-            "하루를 감사의 마음으로 마무리하세요",
-            "어려운 상황 속에서도 희망을 잃지 마세요",
-            "오늘은 스스로를 격려하는 말을 해보세요",
-            "작은 즐거움을 찾아보세요",
-            "다른 시각에서 문제를 바라보면 해결책이 보일 것입니다",
-            "새로운 경험을 통해 성장할 기회를 얻으세요",
-            "불안감을 내려놓고 지금에 집중하세요",
-            "운이 따라주는 날이니 하고 싶은 일을 시도해보세요",
-            "가볍게 운동하며 활력을 되찾아보세요",
-            "지금 떠오른 아이디어를 메모해두세요",
-            "오랜만에 좋아하는 음식을 즐겨보세요",
-            "하루의 끝에 자신을 칭찬해보세요",
-            "사소한 친절이 세상을 밝게 만듭니다",
-            "다른 사람의 이야기에 귀를 기울여보세요",
-            "당신이 이루고자 하는 목표에 한 걸음 더 다가가세요",
-            "불필요한 걱정은 잠시 접어두세요",
-            "소소한 성공이 더 큰 자신감을 가져다줍니다",
-            "오늘은 새로운 습관을 만들기 좋은 날입니다",
-            "지금 하고 있는 일이 곧 보람으로 다가올 것입니다",
-            "타인의 인정을 기다리기보다 스스로를 인정하세요",
-            "소중한 순간들을 기록으로 남겨보세요",
-            "언제나 최선을 다하는 당신의 모습이 멋집니다",
-            "행운은 생각지 못한 순간에 찾아옵니다",
-            "마음속 바람을 현실로 만들기 위한 노력을 시작하세요",
-            "잠깐의 실패가 당신의 가치를 떨어뜨리지 않습니다",
-            "평소와 다른 장소에서 새로운 영감을 얻어보세요",
-            "당신의 선택이 당신의 길을 밝힐 것입니다"
+            "당신의 선택이 당신의 길을 밝힐 것입니다",
+            "새로운 해의 시작이니 도전을 두려워하지 마세요",
+            "올해는 작고 확실한 행복을 찾아보세요",
+            "성공은 당신이 정한 목표에서 시작됩니다",
+            "올해는 당신의 잠재력을 깨울 해가 될 것입니다",
+            "새해 첫 발걸음을 자신감 있게 내디뎌 보세요",
+            "작은 습관이 큰 변화를 만들어냅니다",
+            "계획을 세우고 한 걸음씩 실천해보세요",
+            "새로운 만남이 당신의 인생을 바꿀 수 있습니다",
+            "배움의 자세로 올해를 채워보세요",
+            "변화를 받아들이는 것이 성장을 가져옵니다",
+            "긍정의 힘이 당신의 하루를 밝힙니다",
+            "매일 조금씩 나아가는 것이 중요합니다",
+            "올해는 건강한 습관을 만드는 해로 삼으세요",
+            "도전은 당신을 더 강하게 만듭니다",
+            "새로운 시도를 통해 가능성을 넓혀보세요",
+            "마음을 열고 사람들과 교류해보세요",
+            "작은 실패도 성공을 위한 과정입니다",
+            "자신에게 더 많은 시간을 투자해보세요",
+            "올해는 감사의 마음을 더 자주 표현해보세요",
+            "계획은 구체적으로, 실행은 과감하게",
+            "쉬운 길보다는 가치 있는 길을 선택하세요",
+            "올해는 자신을 믿고 밀고 나가보세요",
+            "도움이 필요한 사람에게 손을 내밀어 보세요",
+            "긍정적인 태도가 행운을 불러옵니다",
+            "주변 사람들과의 관계를 소중히 하세요",
+            "올해는 새로운 취미를 시작해보기 좋은 해입니다",
+            "자신을 믿고 꿈을 향해 나아가세요",
+            "작은 행복을 찾아 기록으로 남겨보세요",
+            "과거보다는 현재와 미래에 집중하세요",
+            "도전과 성취를 즐기는 한 해가 되길 바랍니다",
+            "마음을 여는 것이 더 많은 기회를 가져옵니다",
+            "올해는 여행을 통해 새로운 영감을 얻어보세요",
+            "건강을 우선으로 생각하며 한 해를 보내세요",
+            "작은 감사가 큰 행복을 가져옵니다",
+            "올해는 더 나은 자신을 위한 투자를 시작하세요",
+            "끊임없이 배우고 성장하는 한 해를 만들어보세요",
+            "자신의 속도를 믿고 나아가세요",
+            "한 걸음씩 이루어가는 기쁨을 느껴보세요",
+            "새로운 목표를 세우고 실천에 옮겨보세요",
+            "올해는 평소와 다른 시각에서 세상을 바라보세요",
+            "자신을 사랑하고 아끼는 시간이 필요합니다",
+            "다른 사람에게 따뜻한 말 한마디를 건네 보세요",
+            "매일 조금씩 자신을 발전시키는 한 해를 만들어보세요",
+            "올해는 더 많은 웃음을 만드는 해가 되길 바랍니다",
+            "작은 성취가 모여 큰 성공을 이룰 것입니다",
+            "도전하는 마음이 올해를 빛나게 할 것입니다",
+            "목표를 향해 한 걸음씩 나아가며 즐겨보세요",
+            "마음의 평화를 우선시하는 한 해를 보내세요",
+            "성장과 배움을 즐기는 한 해가 되길 바랍니다",
+            "행운은 준비된 마음에서 시작됩니다",
         ];
+
+
+        const canvas = document.getElementById('spaceCanvas');
+        const ctx = canvas.getContext('2d');
+        let stars = [];
+        const numStars = 300;
 
 
         let hasShared = false;
