--- a/music.html
+++ b/music.html
@@ -47,8 +47,8 @@
         }
 
         .rotating-record {
-            width: 240px;
-            height: 240px;
+            width: 220px;
+            height: 220px;
             border-radius: 50%;
             background: url('LP-img.png') no-repeat center center;
             background-size: contain;
@@ -71,7 +71,7 @@
         }
 
         .info-wrapper {
-            margin: 40px 0 16px 0;
+            margin: 20px 0 16px 0;
             text-align: center;
         }
 
@@ -98,7 +98,7 @@
         }
 
         .control-buttons {
-            margin-top: 40px;
+            margin-top: 20px;
             display: flex;
             gap: 24px;
         }
@@ -107,8 +107,8 @@
             background: none;
             border: none;
             cursor: pointer;
-            width: 50px;
-            height: 50px;
+            width: 40px;
+            height: 40px;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -121,8 +121,8 @@
         }
 
         .button img {
-            width: 100%;
-            height: 100%;
+            width: 80%;
+            height: 80%;
         }
 
         .stars {
@@ -304,12 +304,16 @@
 
         const tracks = [
             {
-                title: 'Cloudybay - Empty',
-                url: 'https://api.soundcloud.com/tracks/1857951750',
+                title: 'Happy New Year',
+                url: 'https://api.soundcloud.com/tracks/1990867611',
             },
             {
                 title: 'Christmas Playlist',
                 url: 'https://api.soundcloud.com/playlists/1681986306',
+            },
+            {
+                title: 'Cloudybay - Empty',
+                url: 'https://api.soundcloud.com/tracks/1857951750',
             },
             {
                 title: 'Merry Christmas Playlist by 초별',
