--- a/down.html
+++ b/down.html
@@ -46,6 +46,7 @@
             font-weight: 400;
             color: #333;
             gap: 4px;
+            margin-top: 40px;
         }
 
         h2 {
@@ -236,6 +237,8 @@
             <img id="instagramImage" src="Name=logoInstagram.svg" alt="instagramImage"></a>
         <a href="https://www.luckyspot.in" target="_blank" onclick="window.open(this.href, '_blank'); return false;">
             <img id="blogImage" src="Name=home.svg" alt="Blog Icon"></a>
+
+            <h2>이미지를 1초 정도 꾹~<br>눌러도 다운로드 가능해요<br></h2>
 
 
         <script>
