--- a/down.html
+++ b/down.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -16,6 +18,7 @@
     <meta name="twitter:title" content="럭키스팟 - 스마트폰 배경화면 다운로드">
     <meta name="twitter:description" content="행운 가득 배경화면 써보세요">
     <meta name="twitter:image" content="og-thumb.png">
+    <script src="main.js" defer></script> 
     <title>럭키스팟 - 스마트폰 배경화면 다운로드</title>
     <style>
         body {
@@ -216,22 +219,7 @@
                 <a href="bg-pangi-hny.png" download="bg-pangi-hny.png" class="download-btn">이미지 다운로드</a>
             </div>
         </div>
-
-        <!-- Sticky 하단 네비게이션 바 -->
-        <div class="nav-bar">
-            <div class="nav-bar">
-                <a href="down.html" target="_self">
-                    <i class="fa-solid fa-circle-arrow-down" alt="nav-icon"></i> 배경다운
-                </a>
-                <a href="index.html" target="_self">
-                    <i class="fa-solid fa-gift" alt="nav-icon"></i> 행운뽑기
-                </a>
-                <a href="music.html" target="_self">
-                    <i class="fa-solid fa-gift" alt="nav-icon"></i> 음악듣기
-                </a>
-            </div>
-        </div>
-
+        <custom-nav></custom-nav>
         <script>
             // JavaScript to load the navigation bar component
             /*테스트용*/
