--- a/music.html
+++ b/music.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="main.js" defer></script> 
     <title>LUCKYSPOT LP Player</title>
     <style>
         @font-face {
@@ -239,19 +240,7 @@
     </div>
 
 
-    <div class="nav-bar">
-        <div class="nav-bar">
-            <a href="down.html" target="_self">
-                <i class="fa-solid fa-circle-arrow-down" alt="nav-icon"></i> 배경다운
-            </a>
-            <a href="index.html" target="_self">
-                <i class="fa-solid fa-gift" alt="nav-icon"></i> 행운뽑기
-            </a>
-            <a href="music.html" target="_self">
-                <i class="fa-solid fa-gift" alt="nav-icon"></i> 음악듣기
-            </a>
-        </div>
-    </div>
+    <custom-nav></custom-nav>
     <iframe id="soundCloudPlayer" width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay"
         src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1857951750&auto_play=false&visual=false"></iframe>
 
