--- a/music.html
+++ b/music.html
@@ -293,24 +293,16 @@
 
         const tracks = [
             {
+                title: 'Happy New Year 2025 - SiNguyen Mix',
+                url: 'https://api.soundcloud.com/tracks/1995793623',
+            },
+            {
                 title: 'Happy New Year',
                 url: 'https://api.soundcloud.com/tracks/1990867611',
             },
             {
-                title: 'Christmas Playlist',
-                url: 'https://api.soundcloud.com/playlists/1681986306',
-            },
-            {
                 title: 'Cloudybay - Empty',
                 url: 'https://api.soundcloud.com/tracks/1857951750',
-            },
-            {
-                title: 'Merry Christmas Playlist by 초별',
-                url: 'https://api.soundcloud.com/playlists/1704750675',
-            },
-            {
-                title: 'Last Christmas - Paris Music',
-                url: 'https://api.soundcloud.com/tracks/326661921',
             },
             {
                 title: '크리스마스 재즈 모음 🎄 - by 장윤지',
