--- a/down.html
+++ b/down.html
@@ -50,6 +50,7 @@
             color: #333;
             gap: 4px;
             margin-top: 40px;
+            margin-bottom: 16px;
         }
 
         h2 {
