--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
             background: transparent;
         }
 
-        #mainImage {
+        #main {
             position: absolute;
             top: 40%;
             left: 52%;
@@ -177,7 +177,7 @@
             height: auto;
         }
 
-        #fortuneImage {
+        #fortune {
             position: absolute;
             top: 20%;
             left: 50%;
@@ -189,7 +189,7 @@
         }
 
         /* 푸터 아이콘 스타일 */
-        #instagramImage {
+        #instagram {
             position: fixed;
             background-color: #d9d9d9;
             padding: 12px;
@@ -204,12 +204,12 @@
             opacity: 0.7;
         }
 
-        #instagramImage:hover {
+        #instagram:hover {
             transform: scale(1.1);
             opacity: 0.9;
         }
 
-        #blogImage {
+        #blog {
             position: fixed;
             background-color: #d9d9d9;
             padding: 12px;
@@ -225,7 +225,7 @@
 
         }
 
-        #blogImage:hover {
+        #blog:hover {
             transform: scale(1.1);
             opacity: 1.0;
         }
@@ -291,13 +291,13 @@
 
     <!--우측 상단 플로팅 ic. 외부로 이동-->
     <a href="https://www.instagram.com/luckyspot.kr" onclick="window.open(this.href, '_blank'); return false;">
-        <img id="instagramImage" src="Name=logoInstagram.svg" alt="instagramImage"></a>
+        <img id="instagram" src="Name=logoInstagram.svg" alt="instagramImage"></a>
     <a href="https://www.luckyspot.in" target="_blank" onclick="window.open(this.href, '_blank'); return false;">
         <img id="blogImage" src="Name=home.svg" alt="Blog Icon"></a>
 
 
-    <img id="mainImage" src="main-image-03.png" alt="Main Image">
-    <img id="fortuneImage" src="fortune-result-img01.png" alt="행운 이미지">
+    <img id="mainImage" src="main-image-04.png" alt="Main Image">
+    <img id="fortuneImage" src="fortune-result-img02.png" alt="행운 이미지">
 
     <!--로띠 임베디드 url-->
     <iframe id="lottiePlayer" src="https://lottie.host/embed/8becdbdb-adca-46b9-8c68-50c6791472a2/RGyKarqPug.lottie"
