--- a/down.html
+++ b/down.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -18,7 +16,7 @@
     <meta name="twitter:title" content="럭키스팟 - 스마트폰 배경화면 다운로드">
     <meta name="twitter:description" content="행운 가득 배경화면 써보세요">
     <meta name="twitter:image" content="og-thumb.png">
-    <script src="main.js" defer></script> 
+    <script src="main.js" defer></script>
     <title>럭키스팟 - 스마트폰 배경화면 다운로드</title>
     <style>
         body {
@@ -203,25 +201,40 @@
     <div class="wrapper">
         <h2>이미지를 1초 정도 꾹~<br>눌러도 다운로드 가능해요<br></h2>
         <div class="container">
-            <!-- 첫 번째 콘텐츠 -->
             <div class="card">
-                <img src="bg-pangi-merrychristmas.jpg" alt="배경화면 1">
-                <a href="bg-pangi-merrychristmas.jpg" download="bg-pangi-merrychristmas.jpg" class="download-btn">이미지
+                <img src="down-image/background-image06.png" alt="배경화면 6">
+                <a href="down-image/background-image06.png" download="background-image06.png" class="download-btn">이미지
                     다운로드</a>
             </div>
-            <!-- 두 번째 콘텐츠 -->
             <div class="card">
-                <img src="bg-pangi-santa.jpg" alt="배경화면 2">
-                <a href="bg-pangi-santa.jpg" download="bg-pangi-santa.jpg" class="download-btn">이미지 다운로드</a>
+                <img src="down-image/background-image05.png" alt="배경화면 5">
+                <a href="down-image/background-image05.png" download="background-image05.png" class="download-btn">이미지
+                    다운로드</a>
             </div>
-            <!-- 세 번째 콘텐츠 -->
             <div class="card">
-                <img src="bg-pangi-hny.png" alt="배경화면 3">
-                <a href="bg-pangi-hny.png" download="bg-pangi-hny.png" class="download-btn">이미지 다운로드</a>
+                <img src="down-image/background-image04.png" alt="배경화면 4">
+                <a href="down-image/background-image04.png" download="background-image04.png" class="download-btn">이미지
+                    다운로드</a>
+            </div>
+            <div class="card">
+                <img src="down-image/background-image03.png" alt="배경화면 3">
+                <a href="down-image/background-image03.png" download="background-image03.png" class="download-btn">이미지
+                    다운로드</a>
+            </div>
+            <div class="card">
+                <img src="down-image/background-image02.png" alt="배경화면 2">
+                <a href="down-image/background-image02.png" download="background-image02.png" class="download-btn">이미지
+                    다운로드</a>
+            </div>
+            <div class="card">
+                <img src="down-image/background-image01.png" alt="배경화면 1">
+                <a href="down-image/background-image01.png" download="background-image01.png" class="download-btn">이미지
+                    다운로드</a>
             </div>
         </div>
         <custom-nav></custom-nav>
         <script>
+
             // JavaScript to load the navigation bar component
             /*테스트용*/
             fetch('component-nav.html')
@@ -232,7 +245,7 @@
                 .catch(error => console.error('Error loading nav component:', error));
         </script>
 
-<h2>이미지를 1초 정도 꾹~<br>눌러도 다운로드 가능해요<br></h2>
+        <h2>이미지를 1초 정도 꾹~<br>눌러도 다운로드 가능해요<br></h2>
 </body>
 
 </html>
