--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
             background: transparent;
         }
 
-        #main {
+        #mainImage {
             position: absolute;
             top: 40%;
             left: 52%;
@@ -177,7 +177,7 @@
             height: auto;
         }
 
-        #fortune {
+        #fortuneImage {
             position: absolute;
             top: 20%;
             left: 50%;
@@ -209,7 +209,7 @@
             opacity: 0.9;
         }
 
-        #blog {
+        #blogImage {
             position: fixed;
             background-color: #d9d9d9;
             padding: 12px;
