--- a/index.html
+++ b/index.html
@@ -39,16 +39,13 @@
         h2 {
             position: absolute;
             left: 50%;
+            bottom: 27%;
             transform: translate(-50%, -50%);
-            font-size: 1.2rem;
-            font-weight: 500;
+            font-size: 1rem;
+            font-weight: 400;
             color: #f4f4f4;
-            z-index: 1000;
+            z-index: 70;
             text-align: center;
-        }
-
-        h1 {
-            top: 5%;
         }
 
         #fortuneButton {
@@ -88,7 +85,7 @@
             border: none;
             border-radius: 60px;
             cursor: pointer;
-            z-index: 50;
+            z-index: 500;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
             justify-items: center;
             transition: background-color 0.3s ease;
