--- a/music.html
+++ b/music.html
@@ -212,6 +212,34 @@
             color: #33C6FF;
         }
 
+
+        .nav-icons a img {
+            width: 24px;
+            /* 아이콘 크기 */
+            height: 24px;
+            margin: 8px;
+            /* 아이콘 간격 */
+            cursor: pointer;
+        }
+
+        .nav-icons {
+            display: flex;
+            justify-content: flex-end;
+            align-items: center;
+        }
+
+        /* 공통 스타일: 아이콘 */
+        .nav-icons a img {
+            width: 24px;
+            /* 아이콘 크기 */
+            height: 24px;
+            cursor: pointer;
+            transition: transform 0.2s ease, opacity 0.3s ease;
+            /* 호버 애니메이션 */
+            margin: 10px;
+            padding: 10px;
+        }
+
         /* 개별 버튼 스타일 */
         .nav-icons a {
             display: flex;
@@ -329,6 +357,7 @@
 
 
     <custom-nav></custom-nav>
+
     <iframe id="soundCloudPlayer" width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay"
         src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1857951750&auto_play=false&visual=false"></iframe>
 
