--- a/music.html
+++ b/music.html
@@ -166,8 +166,8 @@
         }
 
         .button img {
-            width: 80%;
-            height: 80%;
+            width: 100%;
+            height: 100%;
         }
 
         .stars {
@@ -177,6 +177,55 @@
             top: 0;
             left: 0;
             z-index: 0;
+        }
+
+        /* SVG 아이콘 */
+        .nav-icons a img {
+            width: 24px !important;
+            /* 크기 명시 */
+            height: 24px !important;
+            margin: 0;
+            /* 여백 제거 */
+            padding: 0;
+            /* 여백 제거 */
+            cursor: pointer;
+            transition: transform 0.2s ease, opacity 0.3s ease;
+        }
+
+        /* 버튼 스타일 */
+        .nav-icons a {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: #d9d9d9;
+            border-radius: 50%;
+            /* 동그라미 */
+            margin: 16px;
+            /* 버튼 간격 */
+            width: 50px;
+            /* 버튼 크기 */
+            height: 50px;
+            /* 버튼 크기 */
+            opacity: 0.5;
+            margin-bottom: 12px !important;
+            transition: transform 0.2s ease, opacity 0.3s ease;
+        }
+
+        /* 버튼 호버 효과 */
+        .nav-icons a:hover {
+            transform: scale(1.1);
+            /* 확대 */
+            opacity: 0.85;
+        }
+
+        /* nav-icons 컨테이너 */
+        .nav-icons {
+            display: flex;
+            flex-direction: column;
+            position: fixed;
+            top: 30px;
+            right: 16px;
+            z-index: 1000;
         }
 
         .nav-bar {
@@ -211,79 +260,6 @@
 
             color: #33C6FF;
         }
-
-
-        .nav-icons a img {
-            width: 24px;
-            /* 아이콘 크기 */
-            height: 24px;
-            margin: 8px;
-            /* 아이콘 간격 */
-            cursor: pointer;
-        }
-
-        .nav-icons {
-            display: flex;
-            justify-content: flex-end;
-            align-items: center;
-        }
-
-        /* 공통 스타일: 아이콘 */
-        .nav-icons a img {
-            width: 24px;
-            /* 아이콘 크기 */
-            height: 24px;
-            cursor: pointer;
-            transition: transform 0.2s ease, opacity 0.3s ease;
-            /* 호버 애니메이션 */
-            margin: 10px;
-            padding: 10px;
-        }
-
-        /* 개별 버튼 스타일 */
-        .nav-icons a {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background-color: #d9d9d9;
-            /* 버튼 배경색 */
-            margin: 16px;
-            border-radius: 50%;
-            /* 동그라미 형태 */
-            margin-bottom: 12px !important;
-            /* 버튼 간격: 정확히 16px */
-            width: 50px;
-            /* 버튼 크기 */
-            height: 50px;
-            /* 버튼 크기 */
-            margin-top: 16px;
-            /* 버튼 간격 */
-            opacity: 0.5;
-            /* 기본 불투명도 */
-            transition: transform 0.2s ease, opacity 0.3s ease;
-        }
-
-        /* 호버 효과 */
-        .nav-icons a:hover {
-            transform: scale(1.1);
-            /* 확대 */
-            opacity: 0.85;
-            /* 호버 시 불투명도 */
-        }
-
-        /* nav-icons 컨테이너 */
-        .nav-icons {
-            display: flex;
-            flex-direction: column;
-            /* 세로 정렬 */
-            position: fixed;
-            top: 30px;
-            /* 시작 위치 */
-            right: 16px;
-            /* 우측 위치 */
-            z-index: 1000;
-        }
-
 
 
         .star {
