--- a/music.html
+++ b/music.html
@@ -386,8 +386,12 @@
 
         const tracks = [
             {
-                title: 'Happy New Year 2025 - SiNguyen Mix',
+                title: '공부할때 듣기 좋은 지브리 ost 모음',
                 url: 'https://api.soundcloud.com/tracks/1995793623',
+            },
+            {
+                title: 'Happy New Year 2025 - SiNguyen Mix',
+                url: 'https://soundcloud.com/ph-ng-ly-484994307',
             },
             {
                 title: 'Happy New Year',
