--- a/info.html
+++ b/info.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Custom Navigation</title>
+    <title>Info</title>
+    <script src="main.js" defer></script>
+    <script src="custom-nav.js" defer></script>
     <style>
         body {
             margin: 0;
@@ -94,4 +96,8 @@
     <img id="wip" src="pangi-wip.png" alt="Work In Progress">
 </body>
 
+
 </html>
+
+<script>
+</script>
