--- a/tv.html
+++ b/tv.html
@@ -47,15 +47,11 @@
 <body>
     <div class="container">
         <div class="left">
-            <img src="image01.jpg" class="slide active">
-            <img src="image02.jpg" class="slide">
-            <img src="image03.jpg" class="slide">
-            <img src="image04.jpg" class="slide">
-            <img src="image05.jpg" class="slide">
-            <img src="image06.jpg" class="slide">
-            <img src="image07.jpg" class="slide">
-            <img src="image08.jpg" class="slide">
-            <img src="image10.jpg" class="slide">
+            <img src="tv_image/image01.jpg" class="slide active">
+            <img src="tv_image/image02.jpg" class="slide">
+            <img src="tv_image/image03.jpg" class="slide">
+            <img src="tv_image/image04.jpg" class="slide">
+            <img src="tv_image/image05.jpg" class="slide">
         </div>
         <div class="right">
             <div class="qr-container">
@@ -82,7 +78,7 @@
             showSlide(currentIndex);
         }
 
-        setInterval(nextSlide, 3000); // 3초마다 이미지 변경
+        setInterval(nextSlide, 7777); // 7초마다 이미지 변경
     </script>
 </body>
 </html>
