--- a/tv.html
+++ b/tv.html
@@ -55,7 +55,7 @@
         </div>
         <div class="right">
             <div class="qr-container">
-                <img src="qr.png" alt="QR 코드">
+                <img src="qr2.png" alt="QR 코드">
             </div>
         </div>
     </div>
