--- a/index.html
+++ b/index.html
@@ -345,286 +345,58 @@
         crossorigin = "anonymous"
 
         const fortunes = [
-            "올해는 새로운 기회를 향해 도전하는 해로 만들어보세요",
-            "작은 변화가 신년의 큰 성공으로 이어질 것입니다",
-            "새로운 도전 속에서 당신의 잠재력을 발견해보세요",
-            "올해는 긍정적인 변화를 시작하기 좋은 시기입니다",
-            "신년에는 더 큰 목표를 세우고 이루어보세요",
-            "작은 변화가 모여 새로운 길을 열어줍니다",
-            "올해는 새로운 만남이 당신의 삶을 풍요롭게 할 것입니다",
-            "변화를 두려워하지 않고 신년의 새 출발을 응원합니다",
-            "새로운 시작이 당신에게 더 많은 기회를 가져다줄 것입니다",
-            "올해는 당신의 용기와 열정이 빛나는 해가 될 것입니다",
-            "신년의 새로운 결심이 당신을 더 강하게 만들 것입니다",
-            "올해는 작은 성공을 모아 큰 변화를 만들어보세요",
-            "새로운 배움이 당신의 길을 밝힐 것입니다",
-            "변화의 시기를 놓치지 않고 신년을 멋지게 시작하세요",
-            "올해는 스스로의 가치를 더 높이는 해로 만들어보세요",
-            "신년에는 새로운 기술을 배우는 데 도전해보세요",
-            "변화는 작은 한 걸음에서 시작됩니다",
-            "올해는 과거의 실패를 바탕으로 더 나아가는 해가 될 것입니다",
-            "신년에는 감사와 성실함으로 하루를 채워보세요",
-            "새로운 목표를 향해 흔들림 없이 나아가세요",
-            "올해는 변화와 성장이 함께하는 해로 만들어보세요",
-            "신년에는 더 많은 웃음과 사랑을 나누는 한 해로 삼으세요",
-            "변화를 받아들이고 새로운 가능성을 열어보세요",
-            "올해는 자신에게 더 많은 시간을 투자해보세요",
-            "신년에는 작은 성공도 소중히 여기며 감사하세요",
-            "변화를 두려워하지 않는 당신의 결단을 응원합니다",
-            "올해는 새로운 만남과 배움이 당신의 인생을 풍요롭게 할 것입니다",
-            "신년에는 새로운 도전을 통해 한계를 넘어보세요",
-            "올해는 모든 어려움을 극복하는 당신의 해가 될 것입니다",
-            "신년에는 더 많은 기쁨과 성공을 누리시길 바랍니다",
-            "변화의 씨앗을 심어 신년의 꽃을 피워보세요",
-            "올해는 도전과 변화로 가득 찬 한 해가 될 것입니다",
-            "신년에는 새로운 여정을 시작하는 데 두려움을 떨쳐보세요",
-            "올해는 당신의 노력이 결실을 맺는 해로 만들어보세요",
-            "신년의 새로운 기회는 준비된 자에게 찾아옵니다",
-            "변화와 혁신이 당신의 길을 밝히는 신년이 되길 바랍니다",
-            "올해는 모든 가능성을 열어두고 도전하세요",
-            "신년에는 자신의 꿈을 실현하는 데 집중해보세요",
-            "새로운 만남과 도전이 신년을 더 특별하게 만들 것입니다",
-            "올해는 당신의 열정이 모든 것을 가능하게 할 것입니다",
-            "신년에는 과거의 실패를 교훈 삼아 더 나아가세요",
-            "올해는 긍정적인 변화를 이루기 위한 해로 만들어보세요",
-            "신년에는 스스로를 더 사랑하고 격려하는 한 해로 만드세요",
-            "새로운 가능성에 마음을 열고 올해를 맞이하세요",
-            "신년에는 작은 변화가 인생의 큰 전환점이 될 수 있습니다",
-            "올해는 새로운 시작을 응원하며 모든 도전을 지지합니다",
-            "신년에는 주변의 행복을 소중히 여기며 하루하루를 살아보세요",
-            "변화를 통해 더 나은 자신을 만들어가는 한 해가 되길 바랍니다",
-            "올해는 당신의 잠재력이 빛을 발하는 해가 될 것입니다",
-            "새로운 기회는 도전하는 자에게 찾아옵니다",
-            "올해는 당신의 잠재력을 최대한 발휘해보세요",
-            "어려움 속에서도 희망의 씨앗을 심어보세요",
-            "자신의 가치를 믿고 더 큰 목표를 향해 나아가세요",
-            "과거의 실패는 당신을 더 강하게 만들 것입니다",
-            "올해는 당신의 용기가 빛날 해가 될 것입니다",
-            "작은 성과들이 모여 큰 성공을 만들어냅니다",
-            "하루하루를 감사와 성실함으로 채워보세요",
-            "목표를 세우고 그 목표에 집중하는 해로 만들어보세요",
-            "올해는 인생의 전환점을 맞이하기 좋은 해입니다",
-            "변화를 두려워하지 말고 과감히 도전해보세요",
-            "모든 시작은 작아도, 결과는 크게 다가올 것입니다",
-            "주변의 소소한 행복을 소중히 여기는 해로 만들어보세요",
-            "올해는 더 많은 웃음과 사랑을 나누는 해로 삼으세요",
-            "어려운 상황에서도 한 걸음씩 나아가는 용기를 가지세요",
-            "과거에 얽매이지 말고 새로운 출발을 시도해보세요",
-            "작은 변화도 인생의 큰 전환점이 될 수 있습니다",
-            "행복은 멀리 있지 않습니다. 오늘 속에서 찾으세요",
-            "끊임없는 배움이 당신의 길을 밝힐 것입니다",
-            "올해는 자신의 의견을 더 강하게 표현해보세요",
-            "자신이 진정 원하는 것을 위해 시간을 투자하세요",
-            "올해는 타인의 성공을 축하하며 함께 성장해보세요",
-            "작은 성공이 큰 자신감을 만들어줍니다",
-            "올해는 당신의 열정이 빛날 해가 될 것입니다",
-            "올해는 당신의 가능성을 마음껏 펼쳐보세요",
-            "작은 도전이 큰 변화를 만들어냅니다",
-            "긍정적인 태도가 새로운 기회를 가져다줍니다",
-            "마음에 품은 목표를 향해 한 걸음 더 나아가세요",
-            "성공의 비결은 꾸준함에 있습니다",
-            "올해는 새로운 꿈을 꿀 준비를 해보세요",
-            "어려움은 더 강해지기 위한 기회입니다",
-            "매일 새로운 시도를 통해 변화를 만들어보세요",
-            "감사의 마음으로 하루를 시작해보세요",
-            "자신의 열정을 믿고 앞으로 나아가세요",
-            "올해는 과감히 새로운 환경에 도전해보세요",
-            "작은 성과에도 스스로를 칭찬해보세요",
-            "꾸준함이 당신의 삶을 빛나게 할 것입니다",
-            "당신의 노력은 반드시 결실을 맺을 것입니다",
-            "올해는 새로운 인연을 맺기에 좋은 해입니다",
-            "나를 믿는 순간부터 변화는 시작됩니다",
-            "작은 친절이 세상을 밝힐 것입니다",
-            "매일 조금씩 더 나아지는 당신을 응원합니다",
-            "올해는 새로운 기술을 배우기에 좋은 해입니다",
-            "도전하는 모든 순간이 성장으로 이어질 것입니다",
-            "지금 가진 것에 감사하며 하루를 시작하세요",
-            "꿈꾸는 것에 두려워하지 말고 시도해보세요",
-            "올해는 당신의 창의력이 빛을 발할 해가 될 것입니다",
-            "목표를 세우고 작은 걸음부터 시작하세요",
-            "삶의 모든 순간이 배움이 될 수 있습니다",
-            "타인의 장점을 발견하며 배우는 해로 삼으세요",
-            "행복은 지금 이 순간 속에 있습니다",
-            "올해는 더 나은 자신을 발견하는 해가 될 것입니다",
-            "실수를 두려워하지 말고 배움의 기회로 삼으세요",
-            "주변 사람들과 함께하는 즐거움을 느껴보세요",
-            "올해는 자신만의 속도로 나아가 보세요",
-            "열정적으로 살아가는 순간 당신은 빛날 것입니다",
-            "작은 변화가 당신의 인생을 바꿀 수 있습니다",
-            "자신의 가치를 높이는 선택을 하세요",
-            "올해는 사랑을 표현하기 좋은 해입니다",
-            "매일 웃음으로 하루를 시작해보세요",
-            "작은 목표를 이루는 기쁨을 누려보세요",
-            "올해는 더 많이 듣고 더 많이 공감해보세요",
-            "긍정의 말이 당신의 하루를 밝게 만들어줍니다",
-            "당신의 노력은 곧 큰 성취로 이어질 것입니다",
-            "도전의 길에서 두려움을 내려놓으세요",
-            "작은 실천이 큰 성공으로 이어질 것입니다",
-            "올해는 자신에게 더 많은 시간을 투자하세요",
-            "새로운 경험이 당신의 세상을 넓혀줄 것입니다",
-            "좋은 습관을 만드는 데 집중해보세요",
-            "타인의 도움을 감사히 받아들이세요",
-            "매일 조금씩 나아가는 것만으로 충분합니다",
-            "올해는 주변 사람들과 더 많이 대화해보세요",
-            "당신의 진심이 사람들에게 닿을 것입니다",
-            "올해는 인내심이 큰 성과를 가져다줄 것입니다",
-            "작은 도전도 성공의 시작이 될 수 있습니다",
-            "올해는 마음속 두려움을 극복하는 해로 만들어보세요",
-            "당신이 바라는 변화를 스스로 만들어가세요",
-            "배움의 자세로 하루를 채워보세요",
-            "올해는 건강을 최우선으로 삼아보세요",
-            "삶의 균형을 맞추는 데 집중해보세요",
-            "작은 친절이 주변 사람들의 하루를 밝힙니다",
-            "매 순간 자신을 믿고 도전해보세요",
-            "올해는 새롭게 시작하기 좋은 해입니다",
-            "도움이 필요한 사람에게 먼저 손을 내밀어 보세요",
-            "당신의 생각이 당신의 현실을 만듭니다",
-            "매일 감사의 마음으로 하루를 마무리하세요",
-            "올해는 자신을 더 사랑하는 법을 배워보세요",
-            "작은 성취가 더 큰 목표로 이어질 것입니다",
-            "삶을 풍요롭게 하는 경험에 투자해보세요",
-            "올해는 새로운 장소를 여행해보기에 좋은 해입니다",
-            "타인의 성공을 축하하며 함께 성장해보세요",
-            "용기를 내어 평소 하지 않던 것을 시도해보세요",
-            "작은 행복을 발견하고 기록으로 남겨보세요",
-            "올해는 당신의 재능을 발휘할 해가 될 것입니다",
-            "자신의 꿈을 구체적으로 그려보고 실천해보세요",
-            "좋은 관계를 더 깊게 만들어보세요",
-            "올해는 불가능을 가능으로 바꾸는 해가 될 것입니다",
-            "새로운 관점으로 문제를 바라보세요",
-            "올해는 더 나은 자신을 만드는 해로 삼으세요",
-            "당신의 열정이 주위 사람들에게 영감을 줄 것입니다",
-            "작은 노력들이 당신의 인생을 바꿀 것입니다",
-            "주변의 작은 행복을 소중히 여기세요",
-            "올해는 실수를 기회로 바꾸는 해가 될 것입니다",
-            "꿈은 작아도 꾸준히 나아가세요",
-            "작은 실천이 큰 변화를 만듭니다",
-            "올해는 새로운 사람들과의 만남을 즐겨보세요",
-            "타인의 의견에 귀 기울이며 배워보세요",
-            "당신의 결단력이 빛날 해가 될 것입니다",
-            "올해는 평소와 다른 선택을 해보세요",
-            "자신을 믿고 끝까지 도전해보세요",
-            "올해는 자신에게 새로운 목표를 부여해보세요",
-            "작은 것에 감사하며 하루를 보내보세요",
-            "좋은 습관이 당신의 삶을 더 풍요롭게 할 것입니다",
-            "올해는 당신의 노력이 결실을 맺는 해가 될 것입니다",
-            "새로운 시도를 통해 가능성을 넓혀보세요",
-            "당신의 결정이 당신의 미래를 만듭니다",
-            "주어진 시간을 최대한 활용하는 해로 만들어보세요",
-            "평범한 하루도 특별하게 만드는 능력을 길러보세요",
-            "도전하는 과정에서 얻는 경험이 당신을 성장시킵니다",
-            "올해는 실수를 두려워하지 않고 나아가보세요",
-            "당신의 긍정적인 에너지가 주변을 환하게 만들 것입니다",
-            "올해는 함께 나누는 기쁨을 배우는 해가 될 것입니다",
-            "자신의 소중함을 깨닫고 돌보는 해로 만들어보세요",
-            "작은 친절이 큰 행복으로 돌아올 것입니다",
-            "올해는 타인의 장점을 발견하며 배우는 해로 삼으세요",
-            "한 번 더 도전하면 뜻밖의 결과를 얻을 수 있습니다",
-            "새로운 배움이 당신의 가능성을 확장시킵니다",
-            "올해는 더 많은 모험과 발견으로 가득할 것입니다",
-            "기쁨과 배려로 주변을 따뜻하게 만들어보세요",
-            "더 나은 자신을 위해 오늘을 충실히 살아보세요",
-            "성공은 꾸준함 속에서 시작됩니다",
-            "올해는 더 많은 자신감을 쌓아가는 해로 만들어보세요",
-            "결단력 있는 행동이 당신의 길을 열어줄 것입니다",
-            "작은 성취를 축하하며 하루를 시작하세요",
-            "오늘은 새로운 사람에게 다가가 보세요",
-            "머릿속으로만 고민하지 말고 한 걸음 내디뎌 보세요",
-            "예상 밖의 일이 좋은 기회를 가져올 수 있습니다",
-            "마음이 가는 대로 선택해도 괜찮은 날입니다",
-            "오래된 고민을 내려놓기에 좋은 날입니다",
-            "작지만 의미 있는 변화가 오늘 당신을 기다리고 있습니다",
-            "새로운 취미를 시작해보기에 완벽한 날입니다",
-            "오늘은 꾸밈없이 솔직한 모습이 빛날 날입니다",
-            "진심 어린 말을 건넨다면 좋은 일이 생길 것입니다",
-            "어제보다 나은 오늘을 위해 작은 노력을 더해보세요",
-            "기분 전환이 필요한 날 산책이 답일 수 있습니다",
-            "오래 미뤄뒀던 일을 시작하면 좋은 날입니다",
-            "타인의 기대보다는 자신의 마음을 따라가세요",
-            "오늘의 실패는 내일의 성공을 위한 준비 과정입니다",
-            "새로운 루틴을 만들어보세요",
-            "자신을 믿고 한 걸음 더 나아가 보세요",
-            "긍정적인 마음이 행운을 불러옵니다",
-            "잠시 멈춰서 지금 가진 것에 감사해보세요",
-            "실수를 두려워하지 않는다면 성장할 기회가 보일 것입니다",
-            "오늘은 평소와 다른 선택이 놀라운 결과를 가져올 수 있습니다",
-            "대화가 필요한 날 소중한 사람에게 연락해보세요",
-            "목표를 향해 달리는 것도 좋지만 잠깐 쉬어가는 것도 필요합니다",
-            "새롭게 배우는 즐거움이 당신을 기다리고 있습니다",
-            "당신의 진심이 사람들의 마음에 닿을 것입니다",
-            "중요한 결정을 미루지 말고 직감에 따라 움직이세요",
-            "오늘의 작은 노력이 큰 결실로 돌아올 것입니다",
-            "용기를 내어 평소 하지 않던 말을 해보세요",
-            "주변의 도움을 요청하는 것도 용기입니다",
-            "예상치 못한 곳에서 영감을 찾을 수 있는 날입니다",
-            "문제 해결의 실마리는 가까운 곳에 있습니다",
-            "조금 더 웃어보세요 좋은 일이 생길 것입니다",
-            "오늘은 평소와 다른 경로를 선택해 보세요",
-            "새로운 시작을 두려워하지 마세요",
-            "과거의 실수를 복기하며 더 나은 방향을 모색하세요",
-            "자신에게 작은 선물을 해보세요",
-            "오늘은 마음의 짐을 내려놓고 쉬어가는 날로 삼으세요",
-            "느긋함 속에서 답을 찾을 수 있습니다",
-            "당신의 노력이 누군가에게 영감을 줄 것입니다",
-            "무심코 지나쳤던 것에서 행복을 발견하세요",
-            "말보다 행동이 빛을 발하는 날입니다",
-            "오래된 물건을 정리하며 새로운 기운을 받아보세요",
-            "당신의 결단력이 빛날 날입니다",
-            "실패를 두려워하지 않는다면 모든 것이 도전이 됩니다",
-            "마음을 열고 새로운 의견을 받아들여 보세요",
-            "웃음이 필요할 때는 유머를 나눠보세요",
-            "당신의 선택이 당신의 길을 밝힐 것입니다",
-            "새로운 해의 시작이니 도전을 두려워하지 마세요",
-            "올해는 작고 확실한 행복을 찾아보세요",
-            "성공은 당신이 정한 목표에서 시작됩니다",
-            "올해는 당신의 잠재력을 깨울 해가 될 것입니다",
-            "새해 첫 발걸음을 자신감 있게 내디뎌 보세요",
-            "작은 습관이 큰 변화를 만들어냅니다",
-            "계획을 세우고 한 걸음씩 실천해보세요",
-            "새로운 만남이 당신의 인생을 바꿀 수 있습니다",
-            "배움의 자세로 올해를 채워보세요",
-            "변화를 받아들이는 것이 성장을 가져옵니다",
-            "긍정의 힘이 당신의 하루를 밝힙니다",
-            "매일 조금씩 나아가는 것이 중요합니다",
-            "올해는 건강한 습관을 만드는 해로 삼으세요",
-            "도전은 당신을 더 강하게 만듭니다",
-            "새로운 시도를 통해 가능성을 넓혀보세요",
-            "마음을 열고 사람들과 교류해보세요",
-            "작은 실패도 성공을 위한 과정입니다",
-            "자신에게 더 많은 시간을 투자해보세요",
-            "올해는 감사의 마음을 더 자주 표현해보세요",
-            "계획은 구체적으로, 실행은 과감하게",
-            "쉬운 길보다는 가치 있는 길을 선택하세요",
-            "올해는 자신을 믿고 밀고 나가보세요",
-            "도움이 필요한 사람에게 손을 내밀어 보세요",
-            "긍정적인 태도가 행운을 불러옵니다",
-            "주변 사람들과의 관계를 소중히 하세요",
-            "올해는 새로운 취미를 시작해보기 좋은 해입니다",
-            "자신을 믿고 꿈을 향해 나아가세요",
-            "작은 행복을 찾아 기록으로 남겨보세요",
-            "과거보다는 현재와 미래에 집중하세요",
-            "도전과 성취를 즐기는 한 해가 되길 바랍니다",
-            "마음을 여는 것이 더 많은 기회를 가져옵니다",
-            "올해는 여행을 통해 새로운 영감을 얻어보세요",
-            "건강을 우선으로 생각하며 한 해를 보내세요",
-            "작은 감사가 큰 행복을 가져옵니다",
-            "올해는 더 나은 자신을 위한 투자를 시작하세요",
-            "끊임없이 배우고 성장하는 한 해를 만들어보세요",
-            "자신의 속도를 믿고 나아가세요",
-            "한 걸음씩 이루어가는 기쁨을 느껴보세요",
-            "새로운 목표를 세우고 실천에 옮겨보세요",
-            "올해는 평소와 다른 시각에서 세상을 바라보세요",
-            "자신을 사랑하고 아끼는 시간이 필요합니다",
-            "다른 사람에게 따뜻한 말 한마디를 건네 보세요",
-            "매일 조금씩 자신을 발전시키는 한 해를 만들어보세요",
-            "올해는 더 많은 웃음을 만드는 해가 되길 바랍니다",
-            "작은 성취가 모여 큰 성공을 이룰 것입니다",
-            "도전하는 마음이 올해를 빛나게 할 것입니다",
-            "목표를 향해 한 걸음씩 나아가며 즐겨보세요",
-            "마음의 평화를 우선시하는 한 해를 보내세요",
-            "성장과 배움을 즐기는 한 해가 되길 바랍니다",
-            "행운은 준비된 마음에서 시작됩니다",
-        ];
+        "오늘은 작은 기쁨이 우연처럼 찾아올 거예요",
+  "커피 한 잔의 여유가 큰 행운으로 돌아올지도 몰라요",
+  "생각지도 못한 사람이 당신에게 미소를 줄 거예요",
+  "우연히 들은 노래가 당신을 위로해 줄 거예요",
+  "길을 걷다 좋은 아이디어가 번쩍 떠오를지도 몰라요",
+  "오늘은 말하지 않아도 이해해주는 사람이 곁에 있어요",
+  "잊고 있던 일이 기분 좋게 해결될지도 몰라요",
+  "오늘은 당신의 선택이 ‘신의 한 수’가 될 거예요",
+  "마주치는 모든 풍경이 당신에게 좋은 기운을 줄 거예요",
+  "오늘은 유난히 운이 좋은 하루예요—그냥 느낌이 그래요",
+  "작게 웃는 순간들이 당신 하루를 빛낼 거예요",
+  "오늘의 친절이 내일의 기쁨으로 돌아올 거예요",
+  "오늘은 예상보다 더 가볍고 유쾌하게 흘러갈 거예요",
+  "작은 용기가 뜻밖의 행운을 불러올 거예요",
+  "오늘의 하늘처럼, 당신의 하루도 맑게 펼쳐질 거예요",
+  "좋은 일이 천천히, 하지만 분명히 오고 있어요",
+  "오늘은 당신이 찾던 답을 우연히 마주할지도 몰라요",
+  "문득 든 생각이 멋진 계획의 시작이 될 거예요",
+  "오늘은 어떤 길로 가도 좋은 방향으로 흘러갈 거예요",
+  "당신의 진심이 누군가의 마음을 녹일 거예요",
+  "길을 걷다 좋은 소식을 듣게 될지도 몰라요",
+  "오늘의 따뜻한 인사가 큰 위로가 될 거예요",
+  "우연한 대화 속에서 소중한 힌트를 얻게 될 거예요",
+  "오늘의 실수가 뜻밖의 기회로 이어질 수 있어요",
+  "하늘을 올려다보면, 좋은 기분이 따라올 거예요",
+  "오늘은 당신이 주는 웃음이 누군가의 힘이 돼요",
+  "생각보다 빨리 일이 풀릴지도 몰라요",
+  "오늘은 ‘괜찮아’라는 말이 진심으로 느껴질 거예요",
+  "하루를 시작하는 이 순간이 가장 큰 행운이에요",
+  "오늘은 당신 편이 많은 하루일 거예요",
+  "걱정이 줄어들고 여유가 늘어나는 하루가 될 거예요",
+  "당신이 던진 인사 하나가 좋은 인연이 될지도 몰라요",
+  "오늘은 의외로 운 좋은 실수를 하게 될지도 몰라요",
+  "멈춰 선 그 자리에도 좋은 일이 스며들고 있어요",
+  "오늘의 친절은 내일의 기적이 될 거예요",
+  "일상이 특별해지는 순간이 찾아올 거예요",
+  "오늘은 조금 더 용감한 당신이 될 거예요",
+  "바람이 따뜻한 이유는, 당신에게 행운이 오고 있어서예요",
+  "우연히 들은 말 한마디가 큰 용기를 줄 거예요",
+  "오늘은 무언가가 ‘생각보다 쉽게’ 해결될 거예요",
+  "좋은 타이밍은 오늘을 기다리고 있었어요",
+  "오늘의 고민이 내일의 자랑이 될 수 있어요",
+  "좋은 에너지가 당신 주변에 머무르고 있어요",
+  "오늘은 눈을 감았다 뜨는 그 순간부터 달라질 거예요",
+  "당신의 오늘, 누군가의 기억 속 좋은 순간이 될 거예요",
+  "오늘의 한숨도, 내일 웃음이 될 준비를 하고 있어요",
+  "당신이 내민 손길이 누군가에겐 행운이에요",
+  "오늘은 생각보다 나 자신을 더 사랑할 수 있는 날이에요",
+  "계절이 바뀌듯, 기분도 운도 좋아지고 있어요",
+  "오늘은 ‘잘 될 거야’라는 예감이 딱 맞는 하루일 거예요"
+  
+];
 
 
         const canvas = document.getElementById('spaceCanvas');
